update  ignore file and init

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,13 @@ auto-save-list
 savehist
 backups
 ac-comphist.dat
+apple_temp
+articletab
+articleL1
+audiotab
+channeltab
+compositescore
+newstab
+userprofile
+
+
